--- a/TaskManagerProject.vcxproj
+++ b/TaskManagerProject.vcxproj
@@ -128,6 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="task_list.c" />
+    <ClCompile Include="task_manager.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="task_list.h" />
+    <ClInclude Include="task_manager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
