--- a/TaskManagerProject.vcxproj
+++ b/TaskManagerProject.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="display.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="task_list.c" />
     <ClCompile Include="task_manager.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="display.h" />
     <ClInclude Include="task_list.h" />
     <ClInclude Include="task_manager.h" />
   </ItemGroup>
