--- a/TaskManagerProject.vcxproj.filters
+++ b/TaskManagerProject.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="task_list.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="display.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="task_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="task_list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="display.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
